test/corpus/entities.txt
================================================================================
Empty entity with comment
================================================================================

-- | Person data type
Person

--------------------------------------------------------------------------------

(quasi_quotation
  (comment)
  (entity_definition
    (type_name)))

================================================================================
Entity with one field
================================================================================

Person
  name Text

--------------------------------------------------------------------------------

(quasi_quotation
  (entity_definition
    (type_name)
    (entity_body
      (field_definition
        (variable)
        (type_name)))))

================================================================================
Entity with deriving classes
================================================================================

Person
  name Text
  deriving Show
  deriving Eq Ord

--------------------------------------------------------------------------------

(quasi_quotation
  (entity_definition
    (type_name)
    (entity_body
      (field_definition
        (variable)
        (type_name))
      (entity_derives
        (type))
      (entity_derives
        (type)
        (type)))))

================================================================================
Entity with extra newlines
================================================================================

Person

  name Text

  email Text

--------------------------------------------------------------------------------

(quasi_quotation
  (entity_definition
    (type_name)
    (entity_body
      (field_definition
        (variable)
        (type_name))
      (field_definition
        (variable)
        (type_name)))))

================================================================================
Entity with a list field
================================================================================

Person
  names [Text]

--------------------------------------------------------------------------------

(quasi_quotation
  (entity_definition
    (type_name)
    (entity_body
      (field_definition
        (variable)
        (type_list
          (type_name))))))

================================================================================
Entity with a tuple field
================================================================================

Person
  names (Text, Text)

--------------------------------------------------------------------------------

(quasi_quotation
  (entity_definition
    (type_name)
    (entity_body
      (field_definition
        (variable)
        (type_tuple
          (type_name)
          (type_name))))))
